# CodePilot

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: analytics.py  analyze.py  generate.py  history.py  repositories.py  search.py
backend/app/core/: db_client.py  github_client.py  graph_builder.py  import_parser.py  langchain_service.py  llm_client.py  narrative.py
backend/worker/: worker.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/app/providers/: QueryProvider.tsx
frontend/src/app/router/: index.tsx
frontend/src/components/: ArchitectureFlow.tsx  ChatInput.tsx  ResultsDisplay.tsx  ThemeToggle.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/navigation/: SidebarNav.tsx  TopNavbar.tsx
frontend/src/features/analytics/pages/: HealthDashboardPage.tsx
frontend/src/features/architecture/pages/: ArchitecturePage.tsx
frontend/src/features/dead-code/pages/: DeadCodePage.tsx
frontend/src/features/dependency-insights/pages/: DependencyGraphPage.tsx
frontend/src/features/guided-tour/pages/: GuidedTourPage.tsx
frontend/src/features/onboarding/pages/: OnboardingDocsPage.tsx
frontend/src/features/repositories/api/: repository.api.ts
frontend/src/features/repositories/hooks/: useIndexingStatus.ts  useRepositories.ts  useRepository.ts
frontend/src/features/repositories/pages/: LandingPage.tsx  (+3 more)
frontend/src/lib/: api-client.ts
(+1 files in other folders)
