[project]
name = "backend"
version = "0.1.0"
description = "Backend for The Code Fable"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "requests",
    "celery",
    "redis",
    "python-dotenv",
    "psycopg2-binary",
    "pydantic-settings",
    "uvicorn[standard]",
    "google-genai>=2.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
