[project]
name = "backend"
version = "0.1.0"
description = "Backend for The Code Fable"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "requests",
    "redis",
    "python-dotenv",
    "psycopg2-binary",
    "pydantic-settings",
    "uvicorn[standard]",
    "google-genai>=2.6.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.5",
    "tree-sitter-javascript>=0.23.2",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-chroma",
    "langchain-text-splitters",
    "chromadb"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
